fix spacing issue on slides

--- a/views/stylesheets/_application.scss
+++ b/views/stylesheets/_application.scss
@@ -396,7 +396,6 @@ footer{
           background: $pink url("/images/zig-zag-3.gif") no-repeat center 0;
           h1:nth-child(2) {
             margin-top: -15px;
-            margin-bottom: 38px;
           }
         }
         &.slide2{
